# Analicia

./: .gitignore  README.md  disk_copy.segd  generate_test_data.py  pyproject.toml
docs/: segd_rev3_spec.md
examples/: create_segd_file.py  read_segd_file.py
segd/: __init__.py  analyzer.py
segd/common/: binary_utils.py  checksum.py
segd/readers/: factory.py
segd/readers/rev3/: reader.py  writer.py
segd/rev3/: definitions.py  reader.py  writer.py
segd/tape/: __init__.py  tape_handler.py
segd_copier/: controller.py  disk_writer.py  main_gui.py  segd_parser.py  tape_io.py
tests/: conftest.py  test_analyzer.py
tests/common/: test_binary_utils.py  test_checksum.py
tests/data/: simple_header.segd
tests/readers/rev3/: __init__.py  test_reader.py  test_writer.py
tests/rev3/: test_reader.py  test_writer.py
