[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "segd"
version = "0.1.0"
authors = [
  { name="Jules", email="jules@example.com" },
]
description = "A Python library for reading and writing SEGD files."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Geophysics",
]

[project.urls]
"Homepage" = "https://github.com/example/segd-project"
"Bug Tracker" = "https://github.com/example/segd-project/issues"
